--- a/appointment/src/main/resources/application.properties
+++ b/appointment/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=appointment
 server.port=8082
 
+entity.service.url:http://localhost:8080
+
 #Conexao com o sistema de ms_perfil sincrono
 app.services.perfil.url=http://localhost:8080
 
