adicionando envio de email para médico e paciente

--- a/appointment/src/main/resources/application.properties
+++ b/appointment/src/main/resources/application.properties
@@ -1,18 +1,19 @@
 spring.application.name=appointment
 server.port=8082
 
-entity.service.url:http://localhost:8080
+entity.service.url=http://localhost:8080
 
-#Conexao com o sistema de ms_perfil sincrono
-app.services.perfil.url=http://localhost:8080
+user.service.url=http://localhost:8081
 
-
+# ------------------------------------------
+# Configuracoes do email
+# ------------------------------------------
+broker.queue.email.name=default.email
 
 # ----------------------------------------
 # 1. Configuracao do RabbitMQ
 # ----------------------------------------
 spring.rabbitmq.addresses=amqps://thdrwxig:IW10e-P7n7u1VtlUIRzS_xKhkEaRyS06@beaver.rmq.cloudamqp.com/thdrwxig
-
 
 # ----------------------------------------
 # 4. Configuracao do MySQL (ms_profile)
