--- a/appointment/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/appointment/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,15 @@
     "name": "entity.service.url",
     "type": "java.lang.String",
     "description": "A description for 'entity.service.url'"
+  },
+  {
+    "name": "user.service.url",
+    "type": "java.lang.String",
+    "description": "A description for 'user.service.url'"
+  },
+  {
+    "name": "broker.queue.email.name",
+    "type": "java.lang.String",
+    "description": "A description for 'broker.queue.email.name'"
   }
 ]}
