--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=appointment
-server.port=8082
+server.port=8083
 
-entity.service.url=http://localhost:8080
+entity.service.url=http://localhost:8082
 
 user.service.url=http://localhost:8081
 
@@ -18,36 +18,36 @@ spring.rabbitmq.addresses=amqps://thdrwxig:IW10e-P7n7u1VtlUIRzS_xKhkEaRyS06@beav
 # ----------------------------------------
 # 4. Configuracao do MySQL (ms_profile)
 # ----------------------------------------
-# spring.datasource.url=jdbc:mysql://localhost:3306/ms_profile
-# spring.datasource.username=root
-# spring.datasource.password=admin
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+ spring.datasource.url=jdbc:mysql://localhost:3306/ms_appointment
+ spring.datasource.username=root
+ spring.datasource.password=admin
+ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # # Configuracoes do JPA/Hibernate
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+ spring.jpa.hibernate.ddl-auto=update
+ spring.jpa.show-sql=true
+ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # ----------------------------------------
 # 5. Configuração da Conexão H2 (URL, Driver, Dialect)
 # ----------------------------------------
 
-# Tipo de conexão: in-memory (dados perdidos ao reiniciar)
-spring.datasource.url=jdbc:h2:mem:testdb
-# Nome de usuário e senha (opcional para in-memory, mas bom para prática)
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.datasource.driverClassName=org.h2.Driver
+## Tipo de conexão: in-memory (dados perdidos ao reiniciar)
+#spring.datasource.url=jdbc:h2:mem:testdb
+## Nome de usuário e senha (opcional para in-memory, mas bom para prática)
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.datasource.driverClassName=org.h2.Driver
 
-# Habilita o Hibernate a usar o dialeto H2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+## Habilita o Hibernate a usar o dialeto H2
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # ----------------------------------------
 # 6. Configuração da Inicialização e Console
 # ----------------------------------------
 
-# Cria automaticamente as tabelas (create/update/none)
-spring.jpa.hibernate.ddl-auto=update
+## Cria automaticamente as tabelas (create/update/none)
+#spring.jpa.hibernate.ddl-auto=update
 
 # Habilita o console do H2 (Interface Web para visualizar os dados)
 spring.h2.console.enabled=true
