refatorando para SQS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,31 @@
 spring.application.name=appointment
-server.port=8083
+server.port=8084
 
+#------------------------------------------------------------------
+# A chave deve ser a mesma usada no serviço de 'login' para assinar o 'token'
+spring.security.oauth2.resource.server.jwt.issuer-uri=http://localhost:/8081
+# OU se você usa chave simétrica (HS256):
+jwt.secret=c8d1e3f7g9h2j4k6l8m0n5p9q7r5s3t1u0v8w6x4y2z0a1b3c5d7e9f
+
+#-------------------------------------------------------------------
+#Serviços para conexão assíncrona
 entity.service.url=http://localhost:8082
-
 user.service.url=http://localhost:8081
+#-------------------------------------------------------------------
+
+#-------------------------------------------------------------------
+#Configurações AWS e chaves de Acesso
+spring.cloud.aws.region.static=sa-east-1
+spring.cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
+spring.cloud.aws.credentials.secret-key=${AWS_SECRET_ACCESS_KEY}
+medcare.aws.sqs.queue.notification.email=NotificationEmailQueue
+#-------------------------------------------------------------------
+
 
 # ------------------------------------------
 # Configuracoes do email
 # ------------------------------------------
 broker.queue.email.name=default.email
-
-# ----------------------------------------
-# 1. Configuracao do RabbitMQ
-# ----------------------------------------
-spring.rabbitmq.addresses=amqps://thdrwxig:IW10e-P7n7u1VtlUIRzS_xKhkEaRyS06@beaver.rmq.cloudamqp.com/thdrwxig
 
 # ----------------------------------------
 # 4. Configuracao do MySQL (ms_profile)
@@ -23,18 +35,18 @@ spring.rabbitmq.addresses=amqps://thdrwxig:IW10e-P7n7u1VtlUIRzS_xKhkEaRyS06@beav
  spring.datasource.password=admin
  spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# # Configuracoes do JPA/Hibernate
+# # Configurações do JPA/Hibernate
  spring.jpa.hibernate.ddl-auto=update
  spring.jpa.show-sql=true
  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # ----------------------------------------
-# 5. ConfiguraÃ§Ã£o da ConexÃ£o H2 (URL, Driver, Dialect)
+# 5. ConfiguraÃ§Ã£o da Conexão H2 (URL, Driver, Dialect)
 # ----------------------------------------
 
 ## Tipo de conexÃ£o: in-memory (dados perdidos ao reiniciar)
 #spring.datasource.url=jdbc:h2:mem:testdb
-## Nome de usuÃ¡rio e senha (opcional para in-memory, mas bom para prÃ¡tica)
+## Nome de usuario e senha (opcional para in-memory, mas bom para prática)
 #spring.datasource.username=sa
 #spring.datasource.password=password
 #spring.datasource.driverClassName=org.h2.Driver
@@ -50,7 +62,7 @@ spring.rabbitmq.addresses=amqps://thdrwxig:IW10e-P7n7u1VtlUIRzS_xKhkEaRyS06@beav
 #spring.jpa.hibernate.ddl-auto=update
 
 # Habilita o console do H2 (Interface Web para visualizar os dados)
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 
 # Define o caminho de acesso ao console (ex: http://localhost:8082/h2-console)
-spring.h2.console.path=/h2-console
+#spring.h2.console.path=/h2-console
