--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,19 @@ spring.application.name=appointment
 server.port=8084
 
 #------------------------------------------------------------------
-# A chave deve ser a mesma usada no serviço de 'login' para assinar o 'token'
+# A chave deve ser a mesma usada no serviï¿½o de 'login' para assinar o 'token'
 spring.security.oauth2.resource.server.jwt.issuer-uri=http://localhost:/8081
-# OU se você usa chave simétrica (HS256):
+# OU se vocï¿½ usa chave simï¿½trica (HS256):
 jwt.secret=c8d1e3f7g9h2j4k6l8m0n5p9q7r5s3t1u0v8w6x4y2z0a1b3c5d7e9f
 
 #-------------------------------------------------------------------
-#Serviços para conexão assíncrona
+#Serviï¿½os para conexï¿½o assï¿½ncrona
 entity.service.url=http://localhost:8082
 user.service.url=http://localhost:8081
 #-------------------------------------------------------------------
 
 #-------------------------------------------------------------------
-#Configurações AWS e chaves de Acesso
+#Configuraï¿½ï¿½es AWS e chaves de Acesso
 spring.cloud.aws.region.static=sa-east-1
 spring.cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
 spring.cloud.aws.credentials.secret-key=${AWS_SECRET_ACCESS_KEY}
@@ -35,18 +35,18 @@ broker.queue.email.name=default.email
  spring.datasource.password=admin
  spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# # Configurações do JPA/Hibernate
+# # Configuraï¿½ï¿½es do JPA/Hibernate
  spring.jpa.hibernate.ddl-auto=update
  spring.jpa.show-sql=true
  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # ----------------------------------------
-# 5. ConfiguraÃ§Ã£o da Conexão H2 (URL, Driver, Dialect)
+# 5. ConfiguraÃ§Ã£o da Conexï¿½o H2 (URL, Driver, Dialect)
 # ----------------------------------------
 
 ## Tipo de conexÃ£o: in-memory (dados perdidos ao reiniciar)
 #spring.datasource.url=jdbc:h2:mem:testdb
-## Nome de usuario e senha (opcional para in-memory, mas bom para prática)
+## Nome de usuario e senha (opcional para in-memory, mas bom para prï¿½tica)
 #spring.datasource.username=sa
 #spring.datasource.password=password
 #spring.datasource.driverClassName=org.h2.Driver
